--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="bin/Linux/Bubble Wizard.x86_64"
+export_path="../Bubble Wizard/Linux/Bubble Wizard.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -49,7 +49,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="bin/Windows/Bubble Wizard.exe"
+export_path="../Bubble Wizard/Windows/Bubble Wizard.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -114,7 +114,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="bin/Web/index.html"
+export_path="../Bubble Wizard/Web/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
